# mcoded7

./: .clang-format  CMakeLists.txt  LICENSE  README.md  encode.cpp  mcoded7.hpp  unittests.cpp
.github/workflows/: ci.yaml  fuzztest.yaml
